--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,15 @@
-<div class="vw-100 vh-100 bg-success">
-    <h1>E-PET</h1>
+<div class="vw-100 vh-100 bg-primary d-flex flex-md-row flex-column align-items-center justify-content-center text-center">
+    <section class="col-md-8">
+        <img src="assets/logo.png">
+    </section>
+    <section class="col-md-4">
+        <form class="row gy-4 gx-0 col-10">
+
+            <app-input label="Login"></app-input>
+            <app-input label="Senha" type="password"></app-input>
+
+            <button class="btn btn-primary btn-lg" routerLink="/app/home">Acessar</button>
+            <a class="text-reset text-decoration-underline">Não tenho acesso</a>
+        </form>
+    </section>
 </div>
