--- a/src/app/pages/autenticado/autenticado.component.html
+++ b/src/app/pages/autenticado/autenticado.component.html
@@ -1,10 +1,10 @@
 <div class="vw-100 vh-100 d-flex flex-column align-items-center overflow-hidden">
     <app-header></app-header>
-    <div class="d-flex flex-row w-100 flex-grow-1">
+    <div class="d-flex flex-row w-100 flex-grow-1 overflow-hidden">
         <section>
             <app-menu [itens]="itens"></app-menu>
         </section>
-        <section class="flex-grow-1 p-5 overflow-y-scroll">
+        <section class="flex-grow-1 p-5 overflow-auto">
             <router-outlet></router-outlet>
         </section>
     </div>
