feat: ajuste cor dos botões

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,7 +8,7 @@
             <app-input label="Login"></app-input>
             <app-input label="Senha" type="password"></app-input>
 
-            <button class="btn btn-primary btn-lg" routerLink="/app/home">Acessar</button>
+            <button class="btn btn-secondary btn-lg" routerLink="/app/home">Acessar</button>
             <a class="text-reset text-decoration-underline">Não tenho acesso</a>
         </form>
     </section>
