--- a/src/styles.css
+++ b/src/styles.css
@@ -16,19 +16,30 @@ label {
     color: grey;
 }
 
-.btn-primary {
-    --bs-btn-color: #fff;
-    --bs-btn-bg: #333333;
-    --bs-btn-border-color: #333333;
+.btn {
+    font-weight: bold;
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: #454545;
     --bs-btn-hover-border-color: #454545;
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #454545;
-    --bs-btn-active-border-color: #454545;
+    --bs-btn-active-bg: #545454;
+    --bs-btn-active-border-color: #545454;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #333333;
-    --bs-btn-disabled-border-color: #333333;
+}
+
+.btn-primary {
+    --bs-btn-color: #000;
+    --bs-btn-bg: #70dea9;
+    --bs-btn-border-color: #70dea9;
+}
+
+.btn-secondary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #333333;
+    --bs-btn-border-color: #333333;
+}
+
+i.pi {
+    font-size: 0.75em;
+    font-weight: bold;
 }
