--- a/src/app/pages/autenticado/usuarios/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/pages/autenticado/usuarios/lista-usuarios/lista-usuarios.component.html
@@ -1,9 +1,41 @@
 <h2>Usuários</h2>
-<div class="col-md-6">
-    <app-input label="Buscar"></app-input>
+<div class="d-flex justify-content-between">
+    <form class="col-md-6 col-8">
+        <input type="text" placeholder="Buscar" class="form-control">
+    </form>
+    <button class="btn btn-primary">
+        <i class="pi pi-plus me-2"></i>Adicionar
+    </button>
 </div>
-
 <br>
+
+<app-table [itens]="usuarios" [page]="page" [size]="size" [totalElements]="totalElements" (onPage)="onPage($event)">
+    <ng-template appTableHeader>
+        <th scope="col">#</th>
+        <th scope="col">Nome</th>
+        <th scope="col">Email</th>
+        <th scope="col">Setor</th>
+        <th scope="col">Perfil</th>
+        <th scope="col"></th>
+    </ng-template>
+    <ng-template appTableBody let-user>
+        <th scope="row">{{ user.id }}</th>
+        <td>{{ user.name }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.department.name }}</td>
+        <td>{{ user.role.name }}</td>
+        <td class="text-nowrap">
+            <button class="btn btn-primary btn-sm me-1" title="Editar">
+                <i class="pi pi-user-edit"></i>
+            </button>
+            <button class="btn btn-danger btn-sm" title="Remover">
+                <i class="pi pi-trash"></i>
+            </button>
+        </td>
+    </ng-template>
+</app-table>
+
+<!-- <br>
 <p-table [value]="products" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template pTemplate="header">
         <tr>
@@ -40,5 +72,5 @@
             <td>{{ product.quantity }}</td>
         </tr>
     </ng-template>
-</p-table>
+</p-table> -->
 
