feat: ajuste logo e responsividade login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="vw-100 vh-100 bg-primary d-flex flex-md-row flex-column align-items-center justify-content-center text-center">
     <section class="col-md-8">
-        <img src="assets/logo.png">
+        <img src="assets/logo.png" width="60%">
     </section>
-    <section class="col-md-4">
-        <form class="row gy-4 gx-0 col-10">
+    <section class="col-md-4 py-3">
+        <form class="row gy-4 gx-0 col-10 mx-auto">
 
             <app-input label="Login"></app-input>
             <app-input label="Senha" type="password"></app-input>
