--- a/src/app/pages/autenticado/usuarios/form-usuarios/form-usuarios.component.html
+++ b/src/app/pages/autenticado/usuarios/form-usuarios/form-usuarios.component.html
@@ -1,1 +1,47 @@
-<p>form-usuarios works!</p>
+<h2>Cadastro Usuário</h2>
+
+<form class="row g-3 my-4" [formGroup]="form" (submit)="enviar()">
+
+    <div class="col-12">
+        <app-input label="Nome" formControlName="name" [required]="true"></app-input>
+        <app-field-error [control]="form.get('name')" [errors]="erros"></app-field-error>
+    </div>
+
+    <div class="col-12">
+        <app-input label="E-mail" formControlName="email" [required]="true"></app-input>
+        <app-field-error [control]="form.get('email')" [errors]="erros"></app-field-error>
+    </div>
+    
+    <div class="col-md-6">
+        <app-input label="Login" formControlName="login" [required]="true"></app-input>
+        <app-field-error [control]="form.get('login')" [errors]="erros"></app-field-error>
+    </div>
+    <div class="col-md-6">
+        <app-input label="Telefone" formControlName="contact" [required]="true"></app-input>
+        <app-field-error [control]="form.get('contact')" [errors]="erros"></app-field-error>
+    </div>
+    <div class="col-md-6">
+        <app-input label="Cargo/Função"></app-input><!-- ?? -->
+        <!-- <app-field-error [control]="form.get('email')" [errors]="erros"></app-field-error> -->
+    </div>
+    <div class="col-md-6">
+        <app-dropdown label="Perfil" [itens]="roles" itemLabel="name" formControlName="role" [required]="true"></app-dropdown>
+        <app-field-error [control]="form.get('role')" [errors]="erros"></app-field-error>
+    </div>
+    <div class="col-md-6">
+        <app-input label="Senha" formControlName="password" [required]="true"></app-input>
+        <app-field-error [control]="form.get('password')" [errors]="erros"></app-field-error>
+    </div>
+    <div class="col-md-6">
+        <app-dropdown label="Setor" [itens]="departments" itemLabel="name" formControlName="department" [required]="true"></app-dropdown>
+        <app-field-error [control]="form.get('department')" [errors]="erros"></app-field-error>
+    </div>
+
+
+    <div class="col-12 d-flex justify-content-between">
+        <button class="btn btn-primary btn-lg">
+            <i class="pi pi-arrow-left me-2"></i>Voltar
+        </button>
+        <button class="btn btn-dark btn-lg" type="submit">Registrar</button>
+    </div>
+</form>
