feat:  finalizando app

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,6 +4,13 @@
             <img src="assets/logo.png" height="40px">
         </a>
 
+        <span *ngIf="login">
+            {{ login }}
+            <button class="btn btn-primary rounded-circle" (click)="logout.emit()">
+                <i class="pi pi-sign-out"></i>
+            </button>
+        </span>
+
         <button class="btn btn-primary d-md-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive">
             <i class="pi pi-bars"></i>
         </button>
