--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,4 +1,13 @@
+li h5 {
+    font-weight: bold;
+}
+
+ul li ul li a {
+    text-decoration: none;
+}
+
 ul li ul li a:hover {
     text-decoration: underline;
     cursor: pointer;
+    background: #f4f4f4;
 }
