--- a/src/app/pages/autenticado/produtos/lista-produtos/lista-produtos.component.html
+++ b/src/app/pages/autenticado/produtos/lista-produtos/lista-produtos.component.html
@@ -1,1 +1,34 @@
 <h2>Produtos</h2>
+<div class="d-flex justify-content-between">
+    <form class="col-md-6 col-8" (submit)="carregarLista()">
+        <input type="text" placeholder="Buscar" class="form-control" [(ngModel)]="filter">
+    </form>
+    <button class="btn btn-primary" routerLink="/app/produtos/novo">
+        <i class="pi pi-plus me-2"></i>Adicionar
+    </button>
+</div>
+<br>
+
+<app-table [itens]="produtos" [page]="page" [size]="size" [totalElements]="totalElements" (onPage)="onPage($event)">
+    <ng-template appTableHeader>
+        <th scope="col">Código</th>
+        <th scope="col">Nome</th>
+        <th scope="col">Preço</th>
+        <th scope="col">Quantidade</th>
+        <th scope="col"></th>
+    </ng-template>
+    <ng-template appTableBody let-product>
+        <th scope="row">{{ product.code }}</th>
+        <td>{{ product.name }}</td>
+        <td>R$ {{ product.price.toFixed(2) }}</td>
+        <td>{{ product.quantity }}</td>
+        <td class="text-nowrap">
+            <button class="btn btn-primary btn-sm me-1" title="Editar" [routerLink]="['/app/produtos/editar/', product.id]">
+                <i class="pi pi-pencil"></i>
+            </button>
+            <button class="btn btn-danger btn-sm" title="Remover">
+                <i class="pi pi-trash"></i>
+            </button>
+        </td>
+    </ng-template>
+</app-table>
