--- a/src/app/pages/autenticado/autenticado.component.html
+++ b/src/app/pages/autenticado/autenticado.component.html
@@ -4,7 +4,7 @@
         <section>
             <app-menu [itens]="itens"></app-menu>
         </section>
-        <section class="flex-grow-1 p-5 overflow-auto">
+        <section class="flex-grow-1 px-3 py-5 px-sm-5 overflow-auto">
             <router-outlet></router-outlet>
         </section>
     </div>
