--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 
 html, body {
     font-family: 'Cambria Math', Cambria, 'Times New Roman', serif;
-    background: #d4d4d4;
+    background: #e8e8e8;
 }
 
 label {
