--- a/src/app/pages/autenticado/usuarios/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/pages/autenticado/usuarios/lista-usuarios/lista-usuarios.component.html
@@ -1,7 +1,8 @@
-<h2>Usuários</h2>
+<h2 class="mb-4">Usuários</h2>
+
 <div class="d-flex justify-content-between">
     <form class="col-md-6 col-8" (submit)="carregarLista()">
-        <input type="text" placeholder="Buscar" class="form-control" [(ngModel)]="filter">
+        <input type="text" placeholder="Buscar" name="filtro" class="form-control" [(ngModel)]="filter" (ngModelChange)="filtrar()">
     </form>
     <button class="btn btn-primary" routerLink="/app/usuarios/novo">
         <i class="pi pi-plus me-2"></i>Adicionar
